updated swagger api document link
